--- a/sections/featured-category-grid.liquid
+++ b/sections/featured-category-grid.liquid
@@ -65,24 +65,26 @@
           style="{% if background_image != '' %}background-image: url({{ background_image }});{% endif %}"
         >
           <div class="category-grid__content">
-            {% if block.settings.title != blank %}
-              <h3>{{ block.settings.title }}</h3>
-            {% endif %}
-            {% if block.settings.subtitle != blank %}
-              <p>{{ block.settings.subtitle }}</p>
-            {% endif %}
-            {% if block.settings.button_label != blank %}
-              <a
-                class="button button--tertiary category-grid__button"
-                {% if block.settings.button_link == blank %}
-                  role="link" aria-disabled="true"
-                {% else %}
-                  href="{{ block.settings.button_link }}"
-                {% endif %}
-              >
-                {{ block.settings.button_label | escape }}
-              </a>
-            {% endif %}
+            <div class="category-grid__text color-{{ section.settings.text_color_scheme }} gradient">
+              {% if block.settings.title != blank %}
+                <h3>{{ block.settings.title }}</h3>
+              {% endif %}
+              {% if block.settings.subtitle != blank %}
+                <p>{{ block.settings.subtitle }}</p>
+              {% endif %}
+              {% if block.settings.button_label != blank %}
+                <a
+                  class="button button--transparent category-grid__button"
+                  {% if block.settings.button_link == blank %}
+                    role="link" aria-disabled="true"
+                  {% else %}
+                    href="{{ block.settings.button_link }}"
+                  {% endif %}
+                >
+                  {{ block.settings.button_label | escape }}
+                </a>
+              {% endif %}
+            </div>
           </div>
         </div>
       {% endfor %}
@@ -124,6 +126,12 @@
       "id": "color_scheme",
       "default": "scheme-1",
       "label": "Color scheme"
+    },
+    {
+      "type": "color_scheme",
+      "id": "text_color_scheme",
+      "default": "scheme-3",
+      "label": "Text panel color scheme"
     },
     {
       "type": "range",
