added more sections

--- a/sections/featured-category-grid.liquid
+++ b/sections/featured-category-grid.liquid
@@ -14,7 +14,7 @@
   }
 {%- endstyle -%}
 
-<div class="category-grid section-{{ section.id }}-padding gradient color-{{ section.settings.color_scheme }}">
+<div class="category-grid section-{{ section.id }}-padding">
   <div class="page-width">
     {% if section.settings.heading != blank %}
       <div class="category-grid__heading">
