--- a/assets/section-featured-category-grid.css
+++ b/assets/section-featured-category-grid.css
@@ -3,11 +3,25 @@
   margin-bottom: 2rem;
 }
 
+.category-grid .page-width {
+  max-width: 1600px;
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+@media screen and (max-width: 1200px) {
+  .category-grid .page-width {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+}
+
 .category-grid__items {
   display: grid;
   grid-template-columns: minmax(0, 2fr) minmax(0, 1fr);
-  grid-auto-rows: 180px;
-  gap: 1.5rem;
+  grid-auto-rows: 220px;
+  gap: 2rem;
+  width: 100%;
 }
 
 .category-grid__item {
@@ -32,7 +46,7 @@
 .category-grid__item:nth-child(1),
 .category-grid__item:nth-child(4) {
   grid-row: span 2;
-  min-height: 360px;
+  min-height: 440px;
 }
 
 .category-grid__item--standard .category-grid__content {
