--- a/sections/rich-text.liquid
+++ b/sections/rich-text.liquid
@@ -1,4 +1,5 @@
 {{ 'section-rich-text.css' | asset_url | stylesheet_tag }}
+{{ 'section-about-us.css' | asset_url | stylesheet_tag }}
 
 {%- style -%}
   .section-{{ section.id }}-padding {
