--- a/assets/collage.css
+++ b/assets/collage.css
@@ -174,6 +174,19 @@
   object-position: center center;
 }
 
+/* Keep collage heights closer to featured product section */
+@media screen and (max-width: 749px) {
+  .collage .ratio::before {
+    padding-bottom: min(var(--ratio-percent, 100%), 85%);
+  }
+}
+
+@media screen and (min-width: 750px) {
+  .collage .ratio::before {
+    padding-bottom: min(var(--ratio-percent, 100%), 65%);
+  }
+}
+
 .collage-card .deferred-media {
   height: 100%;
   overflow: visible;
