--- a/assets/collage.css
+++ b/assets/collage.css
@@ -170,7 +170,7 @@
 
 /* Make collage images contain instead of cover */
 .collage-card .media img {
-  object-fit: contain;
+  object-fit: cover;
   object-position: center center;
 }
 
