updated the footer links

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -91,8 +91,8 @@
         <ul class="footer-custom__list">
           <li><a href="/pages/contact">Contact Us</a></li>
           <li><a href="/pages/track-order">Track Your Order</a></li>
-          <li><a href="/pages/shipping-delivery">Shipping &amp; Delivery</a></li>
-          <li><a href="/pages/returns-refunds">Returns &amp; Refunds</a></li>
+          <li><a href="/pages/shipping-policy">Shipping &amp; Delivery</a></li>
+          <li><a href="/pages/return-and-refund-policy">Returns &amp; Refunds</a></li>
           <li><a href="/pages/faqs">FAQs</a></li>
           <li><a href="/pages/product-manuals">Product Manuals</a></li>
         </ul>
@@ -101,13 +101,13 @@
         <h2 class="footer-custom__heading">LEGAL</h2>
         <ul class="footer-custom__list">
           <li>
-            <a href="{{ shop.privacy_policy.url | default: '/policies/privacy-policy' }}">Privacy Policy</a>
+            <a href="/pages/privacy-policy">Privacy Policy</a>
           </li>
           <li>
-            <a href="{{ shop.terms_of_service.url | default: '/policies/terms-of-service' }}">Terms &amp; Conditions</a>
+            <a href="/pages/billing-terms-and-condition">Terms &amp; Conditions</a>
           </li>
           <li>
-            <a href="/policies/refund-policy">Return &amp; Refund Policy</a>
+            <a href="/pages/return-and-refund-policy">Return &amp; Refund Policy</a>
           </li>
           <li>
             <a href="/pages/cookie-policy">Cookie Policy</a>
