--- a/assets/collage.css
+++ b/assets/collage.css
@@ -171,7 +171,7 @@
 /* Make collage images contain instead of cover */
 .collage-card .media img {
   object-fit: cover;
-  object-position: center top;
+  object-position: center center;
 }
 
 /* Keep collage heights closer to featured product section */
