--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -38,7 +38,7 @@
   #collection-{{ section.id }} .card__media img {
     height: 100%;
     object-fit: cover;
-    object-position: center top;
+    object-position: center center;
   }
 
   @media screen and (min-width: 750px) {
