--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -397,6 +397,7 @@
 
 .banner__box > * + .banner__text {
   margin-top: 1.5rem;
+  text-shadow: 0 1px 4px rgba(0, 0, 0, 0.12);
 }
 
 @media screen and (min-width: 750px) {
@@ -434,6 +435,7 @@
 }
 
 .banner__heading {
+  text-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
   margin-bottom: 0;
 }
 
