--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -270,7 +270,7 @@
         {%- endcase -%}
       {%- endfor -%}
 
-      <a href="{{ routes.cart_url }}" class="header__icon header__icon--cart link focus-inset" id="cart-icon-bubble">
+      <a href="#" class="header__icon header__icon--cart link focus-inset" id="cart-icon-bubble" aria-label="{{ 'templates.cart.cart' | t }}" onclick="event.preventDefault(); const drawer = document.querySelector('cart-drawer'); if (drawer) drawer.open(this); return false;">
           {% if cart == empty %}
             <span class="svg-wrapper">{{'icon-cart-empty.svg' | inline_asset_content }}</span>
           {% else %}
